--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/css/main.css">
     <title>SASS</title>
 </head>
 
@@ -45,9 +46,8 @@
 
     <main>
         <section class="home">
-            <h2>Hello World!</h2>
-            <h1 class="home__name"> I'm Caio <span class="home__name--last">Augusto</span></h1>
-            <h2>Web Developer & Designer</h2>
+            <h1 class="home__name"> Caio <span class="home__name--last">Augusto</span></h1>
+            <h2>Front-End Developer</h2>
             <div class="social-icons">
                 <a href="#">
                     <i class="fab fa-twitter fa-2x"></i>
@@ -56,7 +56,7 @@
                     <i class="fab fa-facebook fa-2x"></i>
                 </a>
                 <a href="#">
-                    <i class="fab fa-instagram fa-2x"></i>
+                    <i class="fab fa-linkedin fa-2x"></i>
                 </a>
                 <a href="#">
                     <i class="fab fa-github fa-2x"></i>
