modified:   .gitignore 	modified:   index.html 	modified:   js/app.js 	deleted:    portfolio 	modified:   scss/components/_about.scss 	modified:   scss/components/_home.scss 	modified:   src/css/main.css 	modified:   src/css/main.css.map

--- a/index.html
+++ b/index.html
@@ -85,7 +85,50 @@
 
         <section class="about">
             <h1>About Me</h1>
-            <p>Hello! I'm Caio Augusto, a self-taught Front-End Developer currently living in Sorocaba, São Paulo.</p>
+            <p>Hello! I'm Caio Augusto, a Front-End Developer currently living in Sorocaba, São Paulo.</p>
+            <p>I work with:</p>
+            <ul>
+                <li>Responsive Design(Mostly mobile-first)</li>
+                <li>Component Building</li>
+                <li>Layouts from XD to Code</li>
+                <li>Maintenance on old/glitchy pages</li>
+            </ul>
+            <p>Using:</p>
+            <ul>
+                <li>HTML5</li>
+                <li>CSS3
+                    <ul>
+                        <li>SASS(with BEM)</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                </li>
+                <li>Javascript
+                    <ul>
+                        <li>React</li>
+                    </ul>
+                </li>
+                <li>Git</li>
+            </ul>
+            <p>I also have minor knowledge in:</p>
+            <ul>
+                <li>
+                    PHP
+                </li>
+                <li>
+                    SQL(MySQL mainly)
+                </li>
+                <li>
+                    Jquery
+                </li>
+                <li>
+                    Adobe
+                    <ul>
+                        <li>Photoshop(CC)</li>
+                        <li>Illustrator(CC)</li>
+                        <li>XD</li>
+                    </ul>
+                </li>
+            </ul>
         </section>
     </main>
 
