--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css">
-    <title>SASS</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>Caio Augusto</title>
 </head>
 
 <body>
@@ -58,14 +60,14 @@
 
     <main>
         <section class="home" > 
-            <div class="card-container" id="particles-js">
-                <div class="welcome-card">
-                    <span class="avatar"><img src="./img/avatar.jpg" alt=""></span>
-                    <div class="welcome-card__title">
+            <div class="card" id="particles-js">
+                <div class="card-welcome">
+                    <span class="card-welcome__avatar"><img src="./img/avatar.jpg" alt=""></span>
+                    <div class="card-welcome__title">
                         <h1 class="name">Caio <span class="surname">Augusto</span></h1>
                         <p>Front-End Developer</p> 
                     </div>
-                    <div class="welcome-card__social">
+                    <div class="card-welcome__social">
                         <a href="https://twitter.com/c__pantojo">
                                 <i class="fab fa-twitter fa-2x"></i>
                         </a>               
