modified:   index.html 	modified:   scss/components/_home.scss 	modified:   src/css/main.css 	modified:   src/css/main.css.map

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     </header>
 
     <main>
-        <section class="home" > 
-            <div class="card" id="particles-js">
+        <section class="home" id="particles-js" > 
+            <div class="card" >
                 <div class="card-welcome">
                     <span class="card-welcome__avatar"><img src="./img/avatar.jpg" alt=""></span>
                     <div class="card-welcome__title">
