--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="home" id="particles-js" > 
             <div class="card" >
                 <div class="card-welcome">
-                    <span class="card-welcome__avatar"><img src="./img/avatar.jpg" alt=""></span>
+                    <span class="card-welcome__avatar"><img src="./src/img/avatar.jpg" alt=""></span>
                     <div class="card-welcome__title">
                         <h1 class="name">Caio <span class="surname">Augusto</span></h1>
                         <p>Front-End Developer</p> 
@@ -132,6 +132,46 @@
                 </li>
             </ul>
         </section>
+
+        <section class="projects">
+            <h1>Check out some of my projects!</h1>
+
+            <div class="items">
+                <div class="items__title">
+                    <h2>Javascript</h2 >
+                    <span class="arrow">
+                        <i class="fas fa-chevron-down"></i>
+                    </span>
+                </div>
+                <ul class="items__canvas active">
+                    <li class="item" id="whack">
+                        <h3>Whack-A-Mole!</h3>
+                        <img src="./src/img/whack.jpg" alt="Whack-A-Mole">
+                        <a id="whack" href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/"></a>
+                        <span class="fab fa-github"></span>
+                    </li>
+                    <li class="item" id="whack">
+                        <h3>Whack-A-Mole!</h3>
+                        <img src="./src/img/whack.jpg" alt="Whack-A-Mole">
+                        <a id="whack" href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/"></a>
+                        <span class="fab fa-github"></span>
+                    </li>
+                    <li class="item" id="whack">
+                        <h3>Whack-A-Mole!</h3>
+                        <img src="./src/img/whack.jpg" alt="Whack-A-Mole">
+                        <a id="whack" href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/"></a>
+                        <span class="fab fa-github"></span>
+                    </li>
+                    <li class="item" id="whack">
+                        <h3>Whack-A-Mole!</h3>
+                        <img src="./src/img/whack.jpg" alt="Whack-A-Mole">
+                        <a id="whack" href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/"></a>
+                        <span class="fab fa-github"></span>
+                    </li>
+                </ul>
+            </div>
+
+        </section>
     </main>
 
     <footer>&copy; Copyright 2019</footer>
@@ -140,6 +180,7 @@
     <script src="js/app.js"></script>
     <script src="https://kit.fontawesome.com/99dd843032.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
+    <script src="js/gallery.js"></script>
 </body>
 
 </html>
