modified:   index.html 	modified:   js/gallery.js 	new file:   js/gallerydrop.js 	modified:   src/css/main.css 	modified:   src/css/main.css.map 	new file:   src/img/speechrecognition.jpg 	new file:   src/img/voiceinator.png 	modified:   src/scss/_components.scss 	modified:   src/scss/components/_home.scss 	modified:   src/scss/components/_projects.scss 	new file:   src/scss/components/_projectsdrop.scss

--- a/index.html
+++ b/index.html
@@ -139,34 +139,40 @@
             <div class="items">
                 <div class="items__title">
                     <h2>Javascript</h2 >
-                    <span class="arrow">
-                        <i class="fas fa-chevron-down"></i>
-                    </span>
                 </div>
-                <ul class="items__canvas active">
-                    <li class="item" id="whack">
-                        <h3>Whack-A-Mole!</h3>
+                <ul class="items__canvas">
+                    <li class="item">
+                        <div class="item__title">
+                            <a href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/">
+                                <h3>Whack-A-Mole!</h3>
+                            </a>
+                            <a href="" class="git">
+                                <span class="fab fa-github"></span>
+                            </a>
+                        </div>
                         <img src="./src/img/whack.jpg" alt="Whack-A-Mole">
-                        <a id="whack" href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/"></a>
-                        <span class="fab fa-github"></span>
                     </li>
-                    <li class="item" id="whack">
-                        <h3>Whack-A-Mole!</h3>
-                        <img src="./src/img/whack.jpg" alt="Whack-A-Mole">
-                        <a id="whack" href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/"></a>
-                        <span class="fab fa-github"></span>
+                    <li class="item">
+                        <div class="item__title">
+                            <a href="https://caioaugustorodrigues.github.io/Javascript-Voice-Synthesizer/">
+                                <h3>Voiceinator 5000</h3>
+                            </a>
+                            <a href="" class="git">
+                                <span class="fab fa-github"></span>
+                            </a>
+                        </div>
+                        <img src="./src/img/voiceinator.png" alt="Whack-A-Mole">
                     </li>
-                    <li class="item" id="whack">
-                        <h3>Whack-A-Mole!</h3>
-                        <img src="./src/img/whack.jpg" alt="Whack-A-Mole">
-                        <a id="whack" href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/"></a>
-                        <span class="fab fa-github"></span>
-                    </li>
-                    <li class="item" id="whack">
-                        <h3>Whack-A-Mole!</h3>
-                        <img src="./src/img/whack.jpg" alt="Whack-A-Mole">
-                        <a id="whack" href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/"></a>
-                        <span class="fab fa-github"></span>
+                    <li class="item">
+                        <div class="item__title">
+                            <a href="https://caioaugustorodrigues.github.io/js-voice/">
+                                <h3>Javascript Voice Recognition</h3>
+                            </a>
+                            <a href="" class="git">
+                                <span class="fab fa-github"></span>
+                            </a>
+                        </div>
+                        <img src="./src/img/speechrecognition.jpg" alt="Whack-A-Mole">
                     </li>
                 </ul>
             </div>
