modified:   index.html     modified:   src/css/main.css 	modified:   src/css/main.css.map 	renamed:    src/img/avatar.jpg -> src/img/ava2tar.jpg 	new file:   src/img/avatar.png 	new file:   src/img/testa.jpg 	modified:   src/scss/components/_about.scss 	modified:   src/scss/components/_home.scss 	modified:   src/scss/components/_projects.scss 	modified:   src/scss/main.scss

--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
         <nav class="nav">
             <ul class="menu-nav">
                 <li class="menu-nav__item">
-                    <a href="index.html" class="menu-nav__link active">
-                        Home
-                    </a>
-                </li>
-                <li class="menu-nav__item">
                     <a href="about.html" class="menu-nav__link">
                         About Me
                     </a>
@@ -35,8 +30,8 @@
                         Projects
                     </a>
                 </li>
-                <li class="menu-nav__item">
-                    <a href="contact.html" class="menu-nav__link">
+                <li class="menu-nav__item contact">
+                    <a href="mailto:caio.turmaxii@gmail.com" class="menu-nav__link">
                         Contact
                     </a>
                 </li>
@@ -62,7 +57,7 @@
         <section class="home" id="particles-js" > 
             <div class="card" >
                 <div class="card-welcome">
-                    <span class="card-welcome__avatar"><img src="./src/img/avatar.jpg" alt=""></span>
+                    <span class="card-welcome__avatar"><img src="./src/img/avatar.png" alt=""></span>
                     <div class="card-welcome__title">
                         <h1 class="name">Caio <span class="surname">Augusto</span></h1>
                         <p>Front-End Developer</p> 
@@ -134,11 +129,11 @@
         </section>
 
         <section class="projects">
-            <h1>Check out some of my projects!</h1>
+            <h1 class="title">Check out some of my projects!</h1>
 
             <div class="items">
                 <div class="items__title">
-                    <h2>Javascript</h2 >
+                    <h2>JavaScript</h2 >
                 </div>
                 <ul class="items__canvas">
                     <li class="item">
@@ -146,33 +141,52 @@
                             <a href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/">
                                 <h3>Whack-A-Mole!</h3>
                             </a>
-                            <a href="" class="git">
+                        </div>
+                            <a href="https://github.com/caioAugustoRodrigues/Whack-A-Mole-" class="git">
                                 <span class="fab fa-github"></span>
                             </a>
-                        </div>
-                        <img src="./src/img/whack.jpg" alt="Whack-A-Mole">
+                        <img src="./src/img/whack.jpg" alt="Whack-A-Mole! thumbnail">
                     </li>
                     <li class="item">
                         <div class="item__title">
                             <a href="https://caioaugustorodrigues.github.io/Javascript-Voice-Synthesizer/">
                                 <h3>Voiceinator 5000</h3>
                             </a>
-                            <a href="" class="git">
-                                <span class="fab fa-github"></span>
-                            </a>
                         </div>
-                        <img src="./src/img/voiceinator.png" alt="Whack-A-Mole">
+                        <a href="https://github.com/caioAugustoRodrigues/Javascript-Voice-Synthesizer" class="git">
+                            <span class="fab fa-github"></span>
+                        </a>
+                        <img src="./src/img/voiceinator.png" alt="JS Voice Synthesizer thumbnail">
                     </li>
                     <li class="item">
                         <div class="item__title">
                             <a href="https://caioaugustorodrigues.github.io/js-voice/">
                                 <h3>Javascript Voice Recognition</h3>
                             </a>
-                            <a href="" class="git">
-                                <span class="fab fa-github"></span>
+                        </div>
+                        <a href="https://github.com/caioAugustoRodrigues/js-voice" class="git">
+                            <span class="fab fa-github"></span>
+                        </a>
+                        <img src="./src/img/speechrecognition.jpg" alt="JS Speech Detection thumbnail">
+                    </li>
+                </ul>
+            </div>
+
+            <div class="items">
+                <div class="items__title">
+                    <h2>React</h2 >
+                </div>
+                <ul class="items__canvas">
+                    <li class="item">
+                        <div class="item__title">
+                            <a href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/">
+                                <h3>React RealEstate</h3>
                             </a>
                         </div>
-                        <img src="./src/img/speechrecognition.jpg" alt="Whack-A-Mole">
+                            <a href="https://react-real-estate-9d2d7.firebaseapp.com/" class="git">
+                                <span class="fab fa-github"></span>
+                            </a>
+                        <img src="./src/img/whack.jpg" alt="Whack-A-Mole">
                     </li>
                 </ul>
             </div>
