modified:   index.html 	modified:   src/css/main.css 	modified:   src/css/main.css.map 	new file:   src/img/realestate.jpg 	modified:   src/scss/components/_projects.scss

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             <a href="https://react-real-estate-9d2d7.firebaseapp.com/" class="git">
                                 <span class="fab fa-github"></span>
                             </a>
-                        <img src="./src/img/whack.jpg" alt="Whack-A-Mole">
+                        <img src="./src/img/realestate.jpg" alt="Whack-A-Mole">
                     </li>
                 </ul>
             </div>
