--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/css/owl.carousel.css">
+    <link rel="stylesheet" href="./src/css/owl.theme.default.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -128,10 +130,10 @@
             </ul>
         </section>
 
-        <section class="projects">
+        <section class="projects" >
             <h1 class="title">Check out some of my projects!</h1>
 
-            <div class="items">
+            <div class="items" style="display: none;">
                 <div class="items__title">
                     <h2>JavaScript</h2 >
                 </div>
@@ -172,35 +174,84 @@
                 </ul>
             </div>
 
-            <div class="items">
-                <div class="items__title">
-                    <h2>React</h2 >
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <div class="item__title">
+                        <a href="https://react-real-estate-9d2d7.firebaseapp.com/"><h2>React RealEstate</h2></a>
+                        <a href="https://github.com/caioAugustoRodrigues/react__real-estate" class="git">
+                            <span class="fab fa-github"></span>
+                        </a>
+                    </div>
+                    <div class="item__banner">
+                        <a href="https://react-real-estate-9d2d7.firebaseapp.com/">
+                            <img src="./src/img/realestate.jpg" alt="Real Estate">
+                        </a>
+                    </div>
+                    <div class="item__tech">
+                        <i class="fab fa-react"></i>
+                        <i class="fab fa-bootstrap"></i>
+                    </div>
                 </div>
-                <ul class="items__canvas">
-                    <li class="item">
-                        <div class="item__title">
-                            <a href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/">
-                                <h3>React RealEstate</h3>
-                            </a>
-                            <a href="https://react-real-estate-9d2d7.firebaseapp.com/" class="git">
-                                <span class="fab fa-github"></span>
-                            </a>
-                        </div>
+                <div class="item">
+                    <div class="item__title">
+                        <a href="https://caioaugustorodrigues.github.io/Joyjet-WebDesigner/"><h2>JoyJet</h2></a>
+                        <a href="https://github.com/caioAugustoRodrigues/Joyjet-WebDesigner/" class="git">
+                            <span class="fab fa-github"></span>
+                        </a>
+                    </div>
+                    <div class="item__banner">
+                        <a href="https://caioaugustorodrigues.github.io/Joyjet-WebDesigner/">
+                            <img src="./src/img/joyjet.png" alt="Space.">
+                        </a>
+                    </div>
+                    <div class="item__tech">
+                        <i class="fab fa-react"></i>
+                        <i class="fab fa-bootstrap"></i>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__title">
+                        <a href=""><h2>React RealEstate</h2></a>
+                        <a href="https://react-real-estate-9d2d7.firebaseapp.com/" class="git">
+                            <span class="fab fa-github"></span>
+                        </a>
+                    </div>
+                    <div class="item__banner">
                         <img src="./src/img/realestate.jpg" alt="Whack-A-Mole">
-                    </li>
-                </ul>
+                    </div>
+                    <div class="item__tech">
+                        <i class="fab fa-react"></i>
+                        <i class="fab fa-bootstrap"></i>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item__title">
+                        <a href=""><h2>React RealEstate</h2></a>
+                        <a href="https://react-real-estate-9d2d7.firebaseapp.com/" class="git">
+                            <span class="fab fa-github"></span>
+                        </a>
+                    </div>
+                    <div class="item__banner">
+                        <img src="./src/img/realestate.jpg" alt="Whack-A-Mole">
+                    </div>
+                    <div class="item__tech">
+                        <i class="fab fa-react"></i>
+                        <i class="fab fa-bootstrap"></i>
+                    </div>
+                </div>
             </div>
-
         </section>
     </main>
 
-    <footer>&copy; Copyright 2019</footer>
+    <footer>&copy; Copyright 2020</footer>
     
+    <script src="./js/jquery.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
+    <script src="./js/owl.userconfig.js"></script>
+    <script src="https://kit.fontawesome.com/99dd843032.js" crossorigin="anonymous"></script>
     <script src="js/particles.js"></script>
     <script src="js/app.js"></script>
-    <script src="https://kit.fontawesome.com/99dd843032.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
-    <script src="js/gallery.js"></script>
 </body>
 
 </html>
