modified:   index.html 	modified:   src/css/main.css 	modified:   src/css/main.css.map 	modified:   src/scss/components/_home.scss 	modified:   src/scss/components/_menu.scss 	modified:   src/scss/main.scss

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         Contact
                     </a>
                 </li>
+
                 <div class="social-icons menu-nav__item">
                     <a href="#">
                         <i class="fab fa-twitter fa-2x"></i>
@@ -52,6 +53,10 @@
                     </a>
                 </div>
             </ul>
+
+            <div class="name">
+                <a href="index.html">C<span>A</span></a>
+            </div>
         </nav>
     </header>
 
@@ -60,7 +65,7 @@
             <div class="card" >
                 <div class="card-welcome">
                     <span class="card-welcome__avatar"><img src="./src/img/avatar.png" alt=""></span>
-                    <div class="card-welcome__title">
+                    <div class="card-welcome__title" id="logo">
                         <h1 class="name">Caio <span class="surname">Augusto</span></h1>
                         <p>Front-End Developer</p> 
                     </div>
@@ -240,6 +245,10 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="contact">
+            
         </section>
     </main>
 
