modified:   index.html 	modified:   js/owl.userconfig.js 	modified:   src/css/main.css 	modified:   src/css/main.css.map 	new file:   src/img/socialtheme.png 	modified:   src/scss/components/_about.scss 	modified:   src/scss/components/_slideshow.scss 	modified:   src/scss/main.scss

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                 </ul>
             </div>
 
-            <div class="owl-carousel owl-theme">
-                <div class="item">
+            <ul class="owl-carousel owl-theme">
+                <li class="item">
                     <div class="item__title">
                         <a href="https://react-real-estate-9d2d7.firebaseapp.com/"><h2>React RealEstate</h2></a>
                         <a href="https://github.com/caioAugustoRodrigues/react__real-estate" class="git">
@@ -204,8 +204,9 @@
                         <i class="fab fa-react"></i>
                         <i class="fab fa-bootstrap"></i>
                     </div>
-                </div>
-                <div class="item">
+                </li>
+                
+                <li class="item">
                     <div class="item__title">
                         <a href="https://caioaugustorodrigues.github.io/Joyjet-WebDesigner/"><h2>JoyJet</h2></a>
                         <a href="https://github.com/caioAugustoRodrigues/Joyjet-WebDesigner/" class="git">
@@ -221,8 +222,27 @@
                         <i class="fab fa-react"></i>
                         <i class="fab fa-bootstrap"></i>
                     </div>
-                </div>
-                <div class="item">
+                </li>
+
+                <li class="item">
+                    <div class="item__title">
+                        <a href="https://caioaugustorodrigues.github.io/Social-Media-Theme-Switcher/"><h2>Social Media Theme Switcher</h2></a>
+                        <a href="https://github.com/caioAugustoRodrigues/Social-Media-Theme-Switcher" class="git">
+                            <span class="fab fa-github"></span>
+                        </a>
+                    </div>
+                    <div class="item__banner">
+                        <a href="https://caioaugustorodrigues.github.io/Social-Media-Theme-Switcher/">
+                            <img src="./src/img/socialtheme.png" alt="Social media theme switcher">
+                        </a>
+                    </div>
+                    <div class="item__tech">
+                        <i class="fab fa-react"></i>
+                        <i class="fab fa-bootstrap"></i>
+                    </div>
+                </li>
+
+                <li class="item">
                     <div class="item__title">
                         <a href=""><h2>React RealEstate</h2></a>
                         <a href="https://react-real-estate-9d2d7.firebaseapp.com/" class="git">
@@ -236,23 +256,8 @@
                         <i class="fab fa-react"></i>
                         <i class="fab fa-bootstrap"></i>
                     </div>
-                </div>
-                <div class="item">
-                    <div class="item__title">
-                        <a href=""><h2>React RealEstate</h2></a>
-                        <a href="https://react-real-estate-9d2d7.firebaseapp.com/" class="git">
-                            <span class="fab fa-github"></span>
-                        </a>
-                    </div>
-                    <div class="item__banner">
-                        <img src="./src/img/realestate.jpg" alt="Whack-A-Mole">
-                    </div>
-                    <div class="item__tech">
-                        <i class="fab fa-react"></i>
-                        <i class="fab fa-bootstrap"></i>
-                    </div>
-                </div>
-            </div>
+                </li>
+            </ul>
         </section>
 
         <section class="contact">
