modified:   index.html 	modified:   src/css/main.css 	modified:   src/css/main.css.map 	new file:   src/img/greeter.png 	modified:   src/scss/components/_footer.scss 	modified:   src/scss/components/_slideshow.scss

--- a/index.html
+++ b/index.html
@@ -237,24 +237,44 @@
                         </a>
                     </div>
                     <div class="item__tech">
-                        <i class="fab fa-react"></i>
+                        <i class="fab fa-sass"></i>
+                        <i class="fab fa-js-square"></i>
+                    </div>
+                </li>
+
+                <li class="item">
+                    <div class="item__title">
+                        <a href="https://greeeter.000webhostapp.com/"><h2>Greeter(Under development)</h2></a>
+                        <a href="https://github.com/caioAugustoRodrigues/greeter" class="git">
+                            <span class="fab fa-github"></span>
+                        </a>
+                    </div>
+                    <div class="item__banner">
+                        <a href="https://greeeter.000webhostapp.com/">
+                            <img src="./src/img/greeter.png" alt="Greeter">
+                        </a>
+                    </div>
+                    <div class="item__tech">
+                        <i class="fab fa-php"></i>
+                        <i class="fas fa-database"></i>
                         <i class="fab fa-bootstrap"></i>
                     </div>
                 </li>
 
                 <li class="item">
                     <div class="item__title">
-                        <a href=""><h2>React RealEstate</h2></a>
-                        <a href="https://react-real-estate-9d2d7.firebaseapp.com/" class="git">
+                        <a href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/"><h2>Whack-A-Mole(Desktop only)</h2></a>
+                        <a href="https://github.com/caioAugustoRodrigues/Whack-A-Mole-" class="git">
                             <span class="fab fa-github"></span>
                         </a>
                     </div>
                     <div class="item__banner">
-                        <img src="./src/img/realestate.jpg" alt="Whack-A-Mole">
+                        <a href="https://caioaugustorodrigues.github.io/Whack-A-Mole-/">
+                            <img src="./src/img/whack.jpg" alt="Greeter">
+                        </a>
                     </div>
                     <div class="item__tech">
-                        <i class="fab fa-react"></i>
-                        <i class="fab fa-bootstrap"></i>
+                        <i class="fab fa-js-square"></i>
                     </div>
                 </li>
             </ul>
