modified:   index.html 	modified:   src/css/main.css 	modified:   src/css/main.css.map 	modified:   src/scss/components/_about.scss 	modified:   src/scss/components/_slideshow.scss

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <section class="about">
             <div class="about__header">
                 <h1>About Me</h1>
-                <p>Hello! I'm Caio Augusto, a Front-End Developer currently living in Sorocaba, São Paulo.</p>
+                <p>Hello! I'm Caio Augusto, a Front-End Developer currently living in Itajaí, Santa Catarina - Brazil.</p>
             </div>
             
             <div class="about__cards">
@@ -111,7 +111,10 @@
 
                     <ul>
                         <li>HTML5</li>
-                        <li>CSS3
+                        <li>
+                            <h4 class="subtitle">
+                                CSS3
+                            </h4>
                             <ul>
                                 <li>SASS(with BEM)</li>
                                 <li>Bootstrap</li>
@@ -130,7 +133,9 @@
                         <li>SQL</li>
                         <li>Jquery</li>
                         <li>
-                            Adobe
+                            <h4 class="subtitle">
+                                Adobe
+                            </h4>
                             <ul>
                                 <li>Photoshop(CC)</li>
                                 <li>Illustrator(CC)</li>
