modified:   index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <p>Front-End Developer</p> 
                     </div>
                     <div class="card-welcome__social">
-                        <a href="https://twitter.com/c__pantojo">
+                        <a href="https://twitter.com/c___augusto">
                                 <i class="fab fa-twitter fa-2x"></i>
                         </a>               
                         <a href="https://www.facebook.com/profile.php?id=100009550068982">
