modified:   index.html

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         </p>
 
         <p class="language">
-            <a href="deusch.html">German</a>
+            <a href="deutsch.html">German</a>
         </p>
 
         <p class="copy">
