modified:   deutsch.html

--- a/deutsch.html
+++ b/deutsch.html
@@ -45,7 +45,7 @@
         <section class="about">
             <div class="about__header">
                 <h1>Über Mich</h1>
-                <p>Hallo! Ich bin Caio Augusto, Front-End Entwickler. Ich wohne in Itajaí-SC.</p>
+                <p>Hallo! Ich bin Caio Augusto, Front-End Entwickler. Ich wohne aus Itajaí-SC.</p>
             </div>
             
             <div class="about__cards">
