modified:   deutsch.html 	modified:   index.html 	modified:   portugues.html

--- a/portugues.html
+++ b/portugues.html
@@ -105,9 +105,9 @@
                     <h2>Eu falo:</h2>
         
                     <ul>
-                        <li>Português(básico)<li>
-                        <li>Inglês(fluente)</li>
-                        <li>Alemão(básico)</li>
+                        <li>Português (nativo)<li>
+                        <li>Inglês (fluente)</li>
+                        <li>Alemão (básico)</li>
                     </ul>
                 </div>
             </div>
